fixed coverage flags

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,7 +14,7 @@ addopts =
     --verbose
     --tb=short
     --strict-markers
-    --cov=raftengine
+    --cov=src
     --cov-report=html:htmlcov
     --cov-report=term
 # 
