restructure tree in prep for packaging

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,15 +6,19 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Add current directory to Python path for dev_tools imports
-pythonpath = src
+# Add package directories to Python path
+pythonpath = 
+    packages/memorylog/src
+    packages/sqlitelog/src
+    packages/lmdblog/src
+    packages/hybridlog/src
 
 # Output options
 addopts = 
     --verbose
     --tb=short
     --strict-markers
-    --cov=src
+    --cov=packages
     --cov-report=html:htmlcov
     --cov-report=term
 # 
