--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "raftengine-logs"
 version = "0.5.0"
 requires-python = ">=3.11"
 dependencies = [
-    "raftengine @ git+https://github.com/dlparker/raftengine.git@v0.2.0",
+    "raftengine>=0.2.0",
     "lmdb>=1.7.3",
 ]
 
